--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-paper": "^5.0.1",
     "react-native-reanimated": "^2.13.0",
-    "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.15.0"
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.15.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
